# api-hasoffers

./: api-hasoffers.cabal
src/HasOffers/: API.hs
src/HasOffers/API/: #Affiliate.hs#  #Application.hs#  #Offer.hs#  AdManager.hs  Advertiser.hs  AdvertiserBilling.hs  Affiliate.hs  AffiliateBilling.hs  ApiKey.hs  Application.hs  Authentification.hs  Common.hs  Offer.hs  OfferDisabledLink.hs  OfferFile.hs  OfferPixel.hs  Types.hs
src/HasOffers/API/Affiliate/: AdManager.hs  Affiliate.hs  AffiliateBilling.hs  AffiliateUser.hs  Alert.hs  ApiKey.hs  Application.hs  BrandDesign.hs  BrandInformation.hs  Dne.hs  Goal.hs  Notification.hs  NotificationCenter.hs  Offer.hs  OfferFile.hs  OfferPixel.hs  OfferTargeting.hs  OfferUrl.hs  PrivacyPolicy.hs  Report.hs  RingRevenue.hs  SavedReports.hs  ScheduledOfferChange.hs  UserPreferences.hs
src/HasOffers/API/Brand/: #Offer.hs#  AdManager.hs  Advertiser.hs  AdvertiserBilling.hs  AdvertiserUser.hs  Affiliate.hs  AffiliateBilling.hs  ApiKey.hs  Application.hs  Authentification.hs  Offer.hs  OfferDisabledLink.hs  OfferFile.hs  OfferPixel.hs
