name:                api-hasoffers
version:             0.1.1.0
synopsis:            API library for http://hasoffers.com
description:         Please see README.md
homepage:            https://github.com/kelecorix/api-hasoffers#readme
license:             MIT
license-file:        LICENSE
author:              Sergey Bushnyak
maintainer:          sergey.bushnyak@sigrlami.eu
copyright:           2016, Sergey Bushnyak
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HasOffers.API
                 ,     HasOffers.API.AdManager
                 ,     HasOffers.API.Advertiser
                 ,     HasOffers.API.AdvertiserBilling
                 ,     HasOffers.API.AdvertiserUser
                 ,     HasOffers.API.Affiliate
                 ,     HasOffers.API.AffiliateBilling
                 ,     HasOffers.API.ApiKey
                 ,     HasOffers.API.Application 
                 ,     HasOffers.API.Authentification
                 ,     HasOffers.API.Common
                 ,     HasOffers.API.Offer
  
  build-depends:       base >= 4.7 && < 5
               ,       aeson
               ,       http-client
               ,       bytestring
               ,       text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kelecorix/api-hasoffers
