name:                api-hasoffers
version:             0.1.2.0
synopsis:            API library for http://hasoffers.com
description:         Please see README.md
homepage:            https://github.com/kelecorix/api-hasoffers#readme
license:             MIT
license-file:        LICENSE
author:              Sergey Bushnyak
maintainer:          sergey.bushnyak@sigrlami.eu
copyright:           2016, Sergey Bushnyak
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HasOffers.API
                 ,     HasOffers.API.Common
--                 ,     HasOffers.API.Types
                 ,     HasOffers.API.Brand.AdManager
                 ,     HasOffers.API.Brand.Advertiser
                 ,     HasOffers.API.Brand.AdvertiserBilling
                 ,     HasOffers.API.Brand.AdvertiserUser
                 ,     HasOffers.API.Brand.Affiliate
                 ,     HasOffers.API.Brand.AffiliateBilling
                 ,     HasOffers.API.Brand.ApiKey
                 ,     HasOffers.API.Brand.Application
                 ,     HasOffers.API.Brand.Authentification
                 ,     HasOffers.API.Brand.Offer
                 ,     HasOffers.API.Brand.OfferDisabledLink
                 ,     HasOffers.API.Brand.OfferFile
                 ,     HasOffers.API.Brand.OfferPixel
                 ,     HasOffers.API.Affiliate.AdManager
                 ,     HasOffers.API.Affiliate.Affiliate
                 ,     HasOffers.API.Affiliate.AffiliateBilling
                 ,     HasOffers.API.Affiliate.ApiKey
                 ,     HasOffers.API.Affiliate.Application
                 ,     HasOffers.API.Affiliate.Offer
                 ,     HasOffers.API.Affiliate.OfferFile
                 ,     HasOffers.API.Affiliate.OfferPixel
  
  build-depends:       base >= 4.7 && < 5
               ,       aeson
               ,       http-client
               ,       bytestring
               ,       text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kelecorix/api-hasoffers
